--- a/templates/search/respond.tmpl
+++ b/templates/search/respond.tmpl
@@ -19,7 +19,7 @@
     if(vis.display==''&&elem.offsetWidth!=undefined&&elem.offsetHeight!=undefined)
       vis.display = (elem.offsetWidth!=0&&elem.offsetHeight!=0)?'block':'none';
     vis.display = (vis.display==''||vis.display=='block')?'none':'block';
-    alert('toggled ' + whichLayer);
+//    alert('toggled ' + whichLayer);
   }
 </script>
 
@@ -46,16 +46,44 @@
   ajaxrequest.onreadystatechange=function() {
     if (ajaxrequest.readyState==4 && ajaxrequest.status==200) {
 
+      var myTable = document.createElement("table");
+      myTable.setAttribute("id","gradient-style");
+      var tHead = myTable.createTHead();
+      var row = tHead.insertRow(-1);
+      var cell;
+      // Can't just use:
+      // cell = row.insertCell(-1); cell.innerHTML = "ID";
+      // ...because insertCell inserts TD elements, and our CSS uses TH for header cells.
+
+      cell = document.createElement("TH"); cell.innerHTML = "ID"; row.appendChild(cell);
+      cell = document.createElement("TH"); cell.innerHTML = "From"; row.appendChild(cell);
+      cell = document.createElement("TH"); cell.innerHTML = "Call #"; row.appendChild(cell);
+      cell = document.createElement("TH"); cell.innerHTML = "Author"; row.appendChild(cell);
+      cell = document.createElement("TH"); cell.innerHTML = "Title"; row.appendChild(cell);
+      cell = document.createElement("TH"); cell.innerHTML = "Timestamp"; row.appendChild(cell);
+
+      var tFoot = myTable.createTFoot();
+      row = tFoot.insertRow(-1);
+      cell = row.insertCell(-1); cell.colSpan = "6"; cell.innerHTML = "Some random footer text";
+
+      // explicit creation of TBODY element to make IE happy
+      var tBody = document.createElement("TBODY");
+      myTable.appendChild(tBody);
+
       var data = JSON.parse( ajaxrequest.responseText );
       for (var i=0;i<data.unhandledRequests.length;i++) 
  	{
-	  var x = document.createElement('div');
-          x.className = 'unhandledRequest';
-	  var y = document.createElement('p');
-          y.appendChild(document.createTextNode(data.unhandledRequests[i].call_number + ', ' + data.unhandledRequests[i].author + ', ' + data.unhandledRequests[i].title + ', ' + data.unhandledRequests[i].ts));
-          x.appendChild(y);
-	  document.getElementById('mylistDiv').appendChild(x);
+          row = tBody.insertRow(-1);
+          cell = row.insertCell(-1); cell.innerHTML = data.unhandledRequests[i].id;
+          cell = row.insertCell(-1); cell.innerHTML = data.unhandledRequests[i].msg_from;
+          cell = row.insertCell(-1); cell.innerHTML = data.unhandledRequests[i].call_number;
+          cell = row.insertCell(-1); cell.innerHTML = data.unhandledRequests[i].author;
+          cell = row.insertCell(-1); cell.innerHTML = data.unhandledRequests[i].title;
+          cell = row.insertCell(-1); cell.innerHTML = data.unhandledRequests[i].ts;
+
 	}
+
+      document.getElementById('mylistDiv').appendChild(myTable);
 
       toggleLayer("waitDiv");
       toggleLayer("mylistDiv");
@@ -89,8 +117,7 @@
       <h3>Default due date</h3>
 
       <h3>Respond to requests</h3>
-      <div id="mylistDiv">
-      </div>
+      <div id="mylistDiv"></div>
     </div>
 
   </div>
