--- a/templates/search/respond.tmpl
+++ b/templates/search/respond.tmpl
@@ -23,6 +23,19 @@
   }
 </script>
 
+<script language="JavaScript">
+
+  function set_primary_tab(tab_id) {
+    document.getElementById(tab_id).className='current_tab';
+  }
+
+  function set_secondary_tab(tab_id) {
+    document.getElementById(tab_id).className='current_tab';
+  }
+
+  set_secondary_tab("menu_search_respond");
+</script>
+
 <script type="text/javascript">
 
   var ajaxrequest = false;
