--- a/templates/search/pull_list.tmpl
+++ b/templates/search/pull_list.tmpl
@@ -20,6 +20,19 @@
   }
 </script>
 
+<script language="JavaScript">
+
+  function set_primary_tab(tab_id) {
+    document.getElementById(tab_id).className='current_tab';
+  }
+
+  function set_secondary_tab(tab_id) {
+    document.getElementById(tab_id).className='current_tab';
+  }
+
+  set_secondary_tab("menu_search_pull");
+</script>
+
 <div id="main">
 
   <div id="middlecontent">
