--- a/htdocs/maplin3styles.2.0.css
+++ b/htdocs/maplin3styles.2.0.css
@@ -111,16 +111,16 @@ h6
   display: inline;
   font-weight: 500;
   font-size: 130%;
-  color: #1240ab;
+  color: #fff;
 }
 
-#header_quick_access li A:link    { color: #1240ab; text-decoration:underline }
-#header_quick_access li A:active  { color: #1240ab; text-decoration:underline }
-#header_quick_access li A:visited { color: #1240ab; text-decoration:underline }
+#header_quick_access li A:link    { color: #fff; text-decoration:underline }
+#header_quick_access li A:active  { color: #fff; text-decoration:underline }
+#header_quick_access li A:visited { color: #fff; text-decoration:underline }
 
-#header_quick_access A:link    { color: #1240ab; text-decoration:underline }
-#header_quick_access A:active  { color: #1240ab; text-decoration:underline }
-#header_quick_access A:visited { color: #1240ab; text-decoration:underline }
+#header_quick_access A:link    { color: #fff; text-decoration:underline }
+#header_quick_access A:active  { color: #fff; text-decoration:underline }
+#header_quick_access A:visited { color: #fff; text-decoration:underline }
 
 #nav1
 {
@@ -241,12 +241,12 @@ h6
 #leftcontent {
   float:left;
   width: 15%;
-  background: #4671d5;
+  background: #afc2fe;
   border-right: 2px solid #000;
   border-bottom: 2px solid #000;
   margin-right: 15px;
   padding-bottom: 20px;
-  color: white;
+  color: #003399;
 }
 
 #middlecontent {
@@ -257,12 +257,12 @@ h6
 #rightcontent {
   float:left;
   width:10%;
-  background: #4671d5;
+  background: #afc2fe;
   border-left: 2px solid #000;
   border-bottom: 2px solid #000;
   margin-left: 15px;
   padding-bottom: 20px;
-  color: white;
+  color: #003399;
 }
 
 
@@ -275,7 +275,7 @@ h6
 
 #nav2 ul
 {
-  background-color: #1240AB;
+  background-color: #afc2fe;
   text-align: center;
   margin-left: 0;
   padding-left: 0;
@@ -658,7 +658,7 @@ a.continue:hover   { color:#1240AB; font-size:140%; font-weight:600; }
 
 #csstabs ul 
 {
-  background-color: #1240AB;
+  background-color: #afc2fe;
   text-align: center;
   margin: 0em ;
   padding: 1.0em ;
@@ -675,21 +675,21 @@ a.continue:hover   { color:#1240AB; font-size:140%; font-weight:600; }
 }
 #csstabs li a 
 {
-  color: #fff ;
-  background-color: #1240AB ;
+  color: #003399 ;
+  background-color: #afc2f3;
   border: 1px outset #bfffe4 ;
   padding: 4px ;
   text-decoration: none ;
   display: inline ;
 }
 #csstabs li a:hover {
-  color: #fff ;
-  background-color: #ffd073 ;
+  color: #003399 ;
+  background-color: #dbe3ff;
 }
 #csstabs li.current_tab a 
 {
   color: #000000;
-  background-color: #4671d5;
+  background-color: #dbe3ff;
   border: 1px outset #bfffe4 ;
   padding: 4px ;
   text-decoration: none ;
@@ -707,7 +707,7 @@ a.continue:hover   { color:#1240AB; font-size:140%; font-weight:600; }
 
 #csssubmenu ul
 {
-  background-color: #4671d5;
+  background-color: #dbe3ff;
   text-align: center;
   margin: 0em;
   padding: 0.4em;
@@ -724,20 +724,20 @@ a.continue:hover   { color:#1240AB; font-size:140%; font-weight:600; }
 }
 #csssubmenu li a
 {
-  color: #ffd073 ;
-  background-color: #4671d5 ;
+  color: #003399 ;
+  background-color: #dbe3ff;
   border: 1px outset #bfffe4 ;
   padding: 3px ;
   text-decoration: none ;
   display: inline ;
 }
 #csssubmenu li a:hover {
-  color: #fff ;
-  background-color: #00b366 ;
+  color: #003399;
+  background-color: #fff ;
 }
 #csssubmenu li.current_tab a
 {
-  color: #000000 ;
+  color: #000 ;
   background-color: #fff ;
   border: 1px outset #bfffe4 ;
   padding: 3px ;
