briefly highlight date-due column when new default is set

--- a/templates/search/respond.tmpl
+++ b/templates/search/respond.tmpl
@@ -2,6 +2,7 @@
 <TMPL_INCLUDE NAME="submenu_search.tmpl">
 
 <script type="text/javascript" src="/jquery-1.7.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
 <script type="text/javascript" src="/respond.js"></script>
 
 
