provide consistent access to the lid of the logged in library

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -46,6 +46,7 @@
       <li><a href="?authen_logout=1">Log out</a></li>
     </ul>
     <a href="/Librarian_Guide.pdf">Librarian's Guide (PDF)...</a>
+    <p id="lid"><TMPL_VAR NAME="lid"></p>
   </div>
 </DIV>
 
