receiving - no printing yet

--- a/templates/submenu_search.tmpl
+++ b/templates/submenu_search.tmpl
@@ -21,6 +21,12 @@
       </a>
     </li>
 
+    <li id="menu_search_receive">
+      <a href=/cgi-bin/lightning.cgi?rm=receive>
+      Receiving
+      </a>
+    </li>
+
   </ul>
 </div>
 
