returns, and an SQL bug fix

--- a/templates/submenu_search.tmpl
+++ b/templates/submenu_search.tmpl
@@ -27,6 +27,12 @@
       </a>
     </li>
 
+    <li id="menu_search_returns">
+      <a href=/cgi-bin/lightning.cgi?rm=returns>
+      Returns
+      </a>
+    </li>
+
   </ul>
 </div>
 
