--- a/templates/submenu_search.tmpl
+++ b/templates/submenu_search.tmpl
@@ -33,6 +33,12 @@
       </a>
     </li>
 
+    <li id="menu_search_checkins">
+      <a href=/cgi-bin/lightning.cgi?rm=checkins>
+      Check-ins
+      </a>
+    </li>
+
   </ul>
 </div>
 
