--- a/templates/search/history.tmpl
+++ b/templates/search/history.tmpl
@@ -17,6 +17,9 @@ $.ajaxSetup ({
 
 $('document').ready(function(){
 
+    var anOpen = [];
+    var sImageUrl = "/DataTables-1.8.2/examples/examples_support/";
+
     oTable_borrowing = $('#datatable_borrowing').dataTable({
        "bJQueryUI": true,
         "sPaginationType": "full_numbers",
@@ -35,6 +38,19 @@ $('document').ready(function(){
 //			}
 //		]
 //	}
+        "aoColumns": [
+            {
+               "mDataProp": null,
+               "sClass": "control center",
+               "sDefaultContent": '<img src="'+sImageUrl+'details_open.png'+'">'
+            },
+            { "mDataProp": "id" },
+            { "mDataProp": "title" },
+            { "mDataProp": "author" },
+            { "mDataProp": "patron_barcode" },
+            { "mDataProp": "ts" }
+        ]
+
     });
 
     oTable_lending = $('#datatable_lending').dataTable({
@@ -63,6 +79,26 @@ $('document').ready(function(){
             //alert('ajax complete');
 	});
 
+
+    $('#datatable_borrowing td.control').live( 'click', function () {
+      var nTr = this.parentNode;
+      var i = $.inArray( nTr, anOpen );
+   
+      if ( i === -1 ) {
+        $('img', this).attr( 'src', sImageUrl+"details_close.png" );
+        var nDetailsRow = oTable_borrowing.fnOpen( nTr, fnFormatDetails(oTable_borrowing, nTr), 'details' );
+        $('div.innerDetails', nDetailsRow).slideDown();
+        anOpen.push( nTr );
+      }
+      else {
+        $('img', this).attr( 'src', sImageUrl+"details_open.png" );
+        $('div.innerDetails', $(nTr).next()[0]).slideUp( function () {
+          oTable_borrowing.fnClose( nTr );
+          anOpen.splice( i, 1 );
+        } );
+      }
+    } );
+
 });
 
 </script>
@@ -88,7 +124,7 @@ $('document').ready(function(){
 	<table id="datatable_borrowing">
 	  <thead>
 	    <tr>
-	      <th>id</th><th>title</th><th>author</th><th>patron_barcode</th><th>ts</th>
+	      <th></th><th>id</th><th>title</th><th>author</th><th>patron_barcode</th><th>ts</th>
 	    </tr>
 	  </thead>
 	  <tbody>
@@ -102,7 +138,7 @@ $('document').ready(function(){
 	<table id="datatable_lending">
 	  <thead>
 	    <tr>
-	      <th>id</th><th>title</th><th>author</th><th>requester</th><th>ts</th>
+	      <th></th><th>id</th><th>title</th><th>author</th><th>requester</th><th>ts</th>
 	    </tr>
 	  </thead>
 	  <tbody>
