skeleton of unfilled

--- a/templates/submenu_search.tmpl
+++ b/templates/submenu_search.tmpl
@@ -21,6 +21,12 @@
       </a>
     </li>
 
+    <li id="menu_search_unfilled">
+      <a href=/cgi-bin/lightning.cgi?rm=unfilled>
+      Unfilled
+      </a>
+    </li>
+
     <li id="menu_search_receive">
       <a href=/cgi-bin/lightning.cgi?rm=receive>
       Receiving
