--- a/templates/submenu_search.tmpl
+++ b/templates/submenu_search.tmpl
@@ -45,6 +45,12 @@
       </a>
     </li>
 
+    <li id="menu_search_live_requests">
+      <a href=/cgi-bin/lightning.cgi?rm=live_requests>
+      Current ILLs
+      </a>
+    </li>
+
     <li id="menu_search_history">
       <a href=/cgi-bin/lightning.cgi?rm=history>
       History
