--- a/templates/submenu_search.tmpl
+++ b/templates/submenu_search.tmpl
@@ -39,6 +39,12 @@
       </a>
     </li>
 
+    <li id="menu_search_overdue">
+      <a href=/cgi-bin/lightning.cgi?rm=overdue>
+      Overdue
+      </a>
+    </li>
+
     <li id="menu_search_checkins">
       <a href=/cgi-bin/lightning.cgi?rm=checkins>
       Check-ins
