--- a/templates/search/pull_list.tmpl
+++ b/templates/search/pull_list.tmpl
@@ -1,5 +1,5 @@
 <TMPL_INCLUDE NAME="header.tmpl">
-<TMPL_INCLUDE NAME="submenu_search.tmpl">
+<TMPL_INCLUDE NAME="submenu_lend.tmpl">
 
 <script type="text/javascript">
   function toggleLayer( whichLayer )
@@ -30,7 +30,7 @@
     document.getElementById(tab_id).className='current_tab';
   }
 
-  set_secondary_tab("menu_search_pull");
+  set_secondary_tab("menu_lend_pull");
 </script>
 
 <div id="main">
