--- a/templates/search/unfilled.tmpl
+++ b/templates/search/unfilled.tmpl
@@ -1,5 +1,5 @@
 <TMPL_INCLUDE NAME="header.tmpl">
-<TMPL_INCLUDE NAME="submenu_search.tmpl">
+<TMPL_INCLUDE NAME="submenu_borrow.tmpl">
 
 <link type="text/css" href="/css/cupertino/jquery-ui-1.8.16.custom.css" rel="stylesheet" />
 <script type="text/javascript" src="/jquery-1.7.min.js"></script>
@@ -8,7 +8,7 @@
 
 
 <script type="text/javascript">
-set_secondary_tab("menu_search_unfilled");
+set_secondary_tab("menu_borrow_unfilled");
 
 $.ajaxSetup ({  
   cache: false  
