--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -46,7 +46,6 @@
       <li><TMPL_VAR NAME="username"> </li>
       <li><a href="?authen_logout=1">Log out</a></li>
     </ul>
-    <a href="/Librarian_Guide.pdf">Librarian's Guide (PDF)...</a>
     <p id="lid"><TMPL_VAR NAME="lid"></p>
   </div>
 </DIV>
@@ -54,9 +53,27 @@
 <!-- div id="nav1" -->
 <div id="csstabs">
   <ul>
-    <li id="menu_search">
+    <li id="menu_borrow">
       <a href=/cgi-bin/lightning.cgi?rm=lightning_search_form>
-      Interlibrary Loan
+      Borrowing from other libraries
+      </a>
+    </li>
+
+    <li id="menu_lend">
+      <a href=/cgi-bin/lightning.cgi?rm=pull_list>
+      Lending to other libraries
+      </a>
+    </li>
+
+    <li id="menu_borrow_live_requests">
+      <a href=/cgi-bin/lightning.cgi?rm=live_requests>
+      Current ILLs
+      </a>
+    </li>
+
+    <li id="menu_borrow_history">
+      <a href=/cgi-bin/lightning.cgi?rm=history>
+      History
       </a>
     </li>
 
