--- a/templates/search/lightning.tmpl
+++ b/templates/search/lightning.tmpl
@@ -68,16 +68,21 @@
       <li><TMPL_VAR NAME="username"> </li>
       <li><a href="?authen_logout=1">Log out</a></li>
     </ul>
-    <a href="/Librarian_Guide.pdf">Librarian's Guide (PDF)...</a>
   </div>
 </DIV>
 
 <!-- div id="nav1" -->
 <div id="csstabs">
   <ul>
-    <li id="menu_search">
+    <li id="menu_borrow">
       <a href=/cgi-bin/lightning.cgi?rm=lightning_search_form>
-      Search
+      Borrowing from other libraries
+      </a>
+    </li>
+
+    <li id="menu_lend">
+      <a href=/cgi-bin/lightning.cgi?rm=pull_list>
+      Lending to other libraries
       </a>
     </li>
 
@@ -122,7 +127,7 @@
 </script>      
 
 <!-- end header.tmpl -->
-<TMPL_INCLUDE NAME="submenu_search.tmpl">
+<TMPL_INCLUDE NAME="submenu_borrow.tmpl">
 <script type="text/javascript">
   <!--
   set_secondary_tab("menu_search_lightning");
