--- a/templates/search/request_placed.tmpl
+++ b/templates/search/request_placed.tmpl
@@ -1,5 +1,5 @@
 <TMPL_INCLUDE NAME="header.tmpl">
-<TMPL_INCLUDE NAME="submenu_search.tmpl">
+<TMPL_INCLUDE NAME="submenu_borrow.tmpl">
 
 <script type="text/javascript">
   function toggleLayer( whichLayer )
