missed a bit on the great menu re-org

--- a/templates/search/lightning.tmpl
+++ b/templates/search/lightning.tmpl
@@ -86,6 +86,18 @@
       </a>
     </li>
 
+    <li id="menu_borrow_live_requests">
+      <a href=/cgi-bin/lightning.cgi?rm=live_requests>
+      Current ILLs
+      </a>
+    </li>
+
+    <li id="menu_borrow_history">
+      <a href=/cgi-bin/lightning.cgi?rm=history>
+      History
+      </a>
+    </li>
+
     <li id="menu_myaccount">
       <a href=/cgi-bin/myaccount.cgi?rm=myaccount_settings_form>
       My Account
@@ -130,7 +142,7 @@
 <TMPL_INCLUDE NAME="submenu_borrow.tmpl">
 <script type="text/javascript">
   <!--
-  set_secondary_tab("menu_search_lightning");
+  set_secondary_tab("menu_borrow_lightning");
   //-->
 </script>
 
