known data set for testing

--- a/templates/search/overdue.tmpl
+++ b/templates/search/overdue.tmpl
@@ -35,6 +35,7 @@ $('document').ready(function(){
     <h2>Instructions</h2>
     <ol>
       <li>You will need to contact these patrons.</li>
+      <li>Items will be removed from the overdue list when you mark them as 'Returned' on the Returns screen.</li>
     </ol>
   </div>
 
