--- a/templates/search/pull_list.tmpl
+++ b/templates/search/pull_list.tmpl
@@ -39,9 +39,9 @@
     <h3>Pull list</h3>
     <table id="gradient-style">
       <thead>
-	<tr><th>Call #</th><th>Author</th><th>Title</th><th>Date/Time requested</th><th>Requested by</th></tr>
+	<tr><th>Call #</th><th>Author</th><th>Title</th><th>Date/Time requested</th><th>Requested by</th><th>Requested by (ID)</th></tr>
       </thead>
-      <tfoot><tr><td colspan="5">You can print this and take it to the stacks.</td></tr></tfoot>
+      <tfoot><tr><td colspan="6">You can print this and take it to the stacks.</td></tr></tfoot>
       <tbody>
       <TMPL_LOOP name="pulls">
 	<tr>
@@ -49,6 +49,7 @@
 	  <td><TMPL_VAR NAME="author"></td>
 	  <td><TMPL_VAR NAME="title"></td>
 	  <td><TMPL_VAR NAME="ts"></td>
+	  <td><TMPL_VAR NAME="from"></td>
 	  <td><TMPL_VAR NAME="msg_from"></td>
 	</tr>
       </TMPL_LOOP>
