--- a/templates/search/live-requests.tmpl
+++ b/templates/search/live-requests.tmpl
@@ -73,6 +73,7 @@ $('document').ready(function(){
             { "mDataProp": "id" },
             { "mDataProp": "title" },
             { "mDataProp": "author" },
+            { "mDataProp": "requested_by" },
             { "mDataProp": "requester" },
             { "mDataProp": "ts" },
             { "mDataProp": "status" },
@@ -178,7 +179,7 @@ $('document').ready(function(){
 	  <table id="datatable_lending">
 	    <thead>
 	      <tr>
-		<th></th><th>id</th><th>title</th><th>author</th><th>requester</th><th>ts</th><th>status</th><th>message</th>
+		<th></th><th>id</th><th>title</th><th>author</th><th>requested_by</th><th>requester</th><th>ts</th><th>status</th><th>message</th>
 	      </tr>
 	    </thead>
 	    <tbody>
