remove unnecessary lid from current and history

--- a/templates/search/history.tmpl
+++ b/templates/search/history.tmpl
@@ -90,7 +90,7 @@ $('document').ready(function(){
             { "mDataProp": "title" },
             { "mDataProp": "author" },
             { "mDataProp": "requested_by" },
-            { "mDataProp": "requester" },
+//            { "mDataProp": "requester" },
             { "mDataProp": "ts" },
             { "mDataProp": "status" },
             { "mDataProp": "message" }
@@ -221,7 +221,7 @@ $('document').ready(function(){
 	  <table id="datatable_lending">
 	    <thead>
 	      <tr>
-		<th></th><th>id</th><th>title</th><th>author</th><th>requested_by</th><th>requester</th><th>ts</th><th>status</th><th>message</th>
+		<th></th><th>id</th><th>title</th><th>author</th><th>requested_by</th><th>ts</th><th>status</th><th>message</th>
 	      </tr>
 	    </thead>
 	    <tbody>
