beginnings of library-barcode

--- a/templates/submenu_myaccount.tmpl
+++ b/templates/submenu_myaccount.tmpl
@@ -9,6 +9,12 @@
       </a>
     </li>
 
+    <li id="menu_myaccount_library_barcodes">
+      <a href=/cgi-bin/myaccount.cgi?rm=myaccount_library_barcodes_form>
+      Library barcodes
+      </a>
+    </li>
+
     <li id="menu_myaccount_zserver">
       <a href=/cgi-bin/myaccount.cgi?rm=myaccount_zserver_form>
       zServer
