--- a/templates/myaccount/library-barcodes.tmpl
+++ b/templates/myaccount/library-barcodes.tmpl
@@ -56,7 +56,8 @@ $('document').ready(function(){
 			"column": oTable.fnGetPosition( this )[2]
 		    };
         	},
-	        "height": "14px"
+	        "height": "14px",
+	        "select": true
             } );
 
 	})
