--- a/templates/myaccount/library-barcodes.tmpl
+++ b/templates/myaccount/library-barcodes.tmpl
@@ -29,28 +29,32 @@ $('document').ready(function(){
         "iDisplayLength": 25,
         "aLengthMenu": [[25, 50, 100, -1], [25, 50, 100, "All"]],
         "aoColumns": [
-            { "mDataProp": "lid" },
-            { "mDataProp": "borrower" },
-            { "mDataProp": "name" },
-            { "mDataProp": "library" },
-            { "mDataProp": "barcode" },
-        ]
+            { "mDataProp": "lid", "sWidth": "5%" },
+            { "mDataProp": "borrower", "sWidth": "5%" },
+            { "mDataProp": "name", "sWidth": "15%" },
+            { "mDataProp": "library", "sWidth": "50%" },
+            { "mDataProp": "barcode", "sWidth": "15%" },
+        ],
+        "bAutoWidth": false
     });
-
 
     $.getJSON('/cgi-bin/get-library-barcodes.cgi', {lid: <TMPL_VAR name="lid">},
             function(data){
                 build_table(data);
            })
 	.success(function() {
-	    alert('success');
+	    //alert('success');
 	    /* Apply the jEditable handlers to the table */
 	    $('td:eq(4)', oTable.fnGetNodes()).editable( '/cgi-bin/update-library-barcode.cgi', {
 	        "callback": function( sValue, y ) {
+	            var obj = jQuery.parseJSON( sValue );
+	            //alert('data: '+obj.data);
 		    var aPos = oTable.fnGetPosition( this );
-		    oTable.fnUpdate( sValue, aPos[0], aPos[1] );
+		    //oTable.fnUpdate( sValue, aPos[0], aPos[1] );
+		    oTable.fnUpdate( obj.data, aPos[0], aPos[1] );
 	        },
          	"submitdata": function ( value, settings ) {
+	            //alert('value: '+value+'\nsettings: '+settings);
 	            return {
 		        "row_id": this.parentNode.getAttribute('id'),
 			"column": oTable.fnGetPosition( this )[2]
@@ -68,6 +72,14 @@ $('document').ready(function(){
             //alert('ajax complete');
 	});
 
+
+    $('#datatable_barcodes tbody tr').live('mouseover mouseout', function (event) {
+        if (event.type == 'mouseover') {
+            $(this).addClass("ui-state-hover");
+        } else {
+            $(this).removeClass("ui-state-hover");
+        }
+    });
 
 
 });
