scannable patron barcodes on pull list!  Requires perl modules GD::Barcode, GD::Barcode::Code39, and MIME::Base64

--- a/templates/myaccount/library-barcodes.tmpl
+++ b/templates/myaccount/library-barcodes.tmpl
@@ -92,7 +92,7 @@ $('document').ready(function(){
   <div id="leftcontent">
     <h2>Instructions</h2>
     <ol>
-      <li>Click on a row and enter the barcode from your ILS.</li>
+      <li>Click on the barcode column to enter the barcode from your ILS.</li>
     </ol>
   </div>
 
